2023-10-21T00:27:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6594011073 # 1271
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 98 286 / 102 295
* notice: next accum: outdated-unq outdated-all / unq all: 100 288 / 102 295
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-06] / []

2023-10-17T16:07:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6549878036 # 1261
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-17
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 98 286 / 101 294
* notice: next accum: outdated-unq outdated-all / unq all: 98 286 / 102 295
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-17]

2023-10-16T16:07:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6536271262 # 1258
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 97 284 / 100 288
* notice: next accum: outdated-unq outdated-all / unq all: 98 286 / 101 294
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [2023-10-02] / [2023-10-16]

2023-10-15T08:07:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6522876402 # 1254