@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-21T00:27:15Z",
+  "timestamp" : "2023-10-26T00:27:32Z",
   "count_outdated" : 288,
   "uniques_outdated" : 100,
-  "count" : 295,
-  "uniques" : 102,
+  "count" : 299,
+  "uniques" : 103,
   "views" : [
     {
       "timestamp": "2023-10-16T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-25T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
