@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 2,
+  "count": 11,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2023-10-16T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2023-10-17T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-25T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
